<?xml version="1.0"?>
<package>
  <name>talker_example</name>
  <version>0.0.1</version>
  <description>The talker_example package</description>

  <maintainer email="lander.usategui@gmail.com">Lander Usategui</maintainer>

  <license>GPLv3</license>
  <author email="lander.usategui@gmail.com">Lander Usategui</author>


  <depend package="std_msgs" />

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>


  <export>

  </export>
</package>
